--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,21 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
+#Ignore thumbnails created by Windows
+Thumbs.db
+#Ignore files built by Visual Studio
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
-*.out
-*.app
+*.dll
+*.rsm
+*.pdb
+*.dcu
+*.local
+*.identcache
+*.ppu
+*.a
+*.o
+*.compiled
+*.stat
+*.tvsconfig
+*.~*
+lib/
+x64/
+Win32/
