--- a/SplitUdr.vcxproj.filters
+++ b/SplitUdr.vcxproj.filters
@@ -29,4 +29,9 @@
       <Filter>Исходные файлы</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="split_udr.rc">
+      <Filter>Файлы ресурсов</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
