--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,68 +11,15 @@
 # Contributor(s): ______________________________________.
 # ----------------------------------------------------------------------------
 
-cmake_minimum_required (VERSION 3.5)
+cmake_minimum_required (VERSION 3.13)
 
-project (splitudr VERSION 1.1.1)
-
-set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
+project (splitudr 
+    VERSION 1.1.2
+	LANGUAGES CXX)
 
 if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release)
 endif()
-
-###############################################################################
-# CMake standard options
-############
-
-option(BUILD_SHARED_LIBS "Build shared library" ON)
-
-
-###############################################################################
-# Require and enable C++ 0x/11/14/17
-############
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-message(STATUS "splitudr compile: C++${CMAKE_CXX_STANDARD}")
-
-add_compile_definitions(HAVE_CONFIG_H)
-
-if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
-  	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wnarrowing -Werror")
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
-	include(CheckCXXCompilerFlag)
-	check_cxx_compiler_flag("-stdlib=libc++" CXX_SUPPORTS_STDLIB)
-	if(CXX_SUPPORTS_STDLIB)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
-		set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++")
-		set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -stdlib=libc++")
-	endif()	
-elseif(CMAKE_CXX_COMPILER_ID MATCHES "Intel")
-	string(REGEX REPLACE "[/-]W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /QaxCORE-AVX2")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:precise")
-	set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   /Od")
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O3")
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Qipo")
-elseif(MSVC)
-	string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-	if(MSVC_VERSION LESS 1900)
-		message(FATAL_ERROR "splitudr build: Build requires C++17-compliant compiler")
-	endif()
-endif()
-
-if(CMAKE_BUILD_TYPE MATCHES Debug)
-	message(STATUS "splitudr build: compiler flags - ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")
-elseif(CMAKE_BUILD_TYPE MATCHES Release)
-	message(STATUS "splitudr build: compiler flags - ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}")
-endif()
-
-####################################
-# src
-####################################
-file(GLOB_RECURSE splitudr_sources "src/*")
 
 set(FIREBIRD_DIR /opt/firebird)
 set(FIREBIRD_LIB_DIR ${FIREBIRD_DIR}/lib)
@@ -83,18 +30,28 @@ set(FIREBIRD_UDR_DIR ${FIREBIRD_DIR}/plugins/udr)
 ####################################
 add_library(splitudr SHARED ${splitudr_sources})
 
-
-link_directories(${FIREBIRD_LIB_DIR})
+####################################
+# src
+####################################
+target_sources(splitudr PRIVATE "src/SplitProcedure.cpp")
 
 ####################################
 # include directories
 ####################################
-target_include_directories(splitudr
-  PRIVATE
-     "include"
+target_include_directories(splitudr PRIVATE
+    ${FIREBIRD_INCLUDE_DIR}
 )
 
-target_link_libraries(splitudr fbclient)
+# require C++17 standard
+target_compile_features(splitudr PRIVATE cxx_std_17)
+target_compile_definitions(splitudr PRIVATE HAVE_CONFIG_H)
+target_compile_options(splitudr PRIVATE
+#    -Werror
+    -Wall
+    -Wextra
+    -Wpedantic
+    -Wno-unused-parameter
+)
 
 
 install(TARGETS splitudr DESTINATION ${FIREBIRD_UDR_DIR})
