--- a/SplitUdr.vcxproj
+++ b/SplitUdr.vcxproj
@@ -28,6 +28,10 @@
   <ItemGroup>
     <ResourceCompile Include="src\split_udr.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+    <None Include="sql\split-udr.sql" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{38960C55-869A-466C-B469-11BF3BF5E34E}</ProjectGuid>
@@ -104,7 +108,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;SPLITUDR_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Firebird\4.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Firebird\5.0\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -123,7 +127,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Firebird\4.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Firebird\5.0\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -147,7 +151,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Firebird\4.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Firebird\5.0\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -173,7 +177,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Firebird\4.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Firebird\5.0\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
